test/Dialect/Struct/types_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  struct.def @q {
    // expected-error@+1 {{AffineMapAttr must yield a single result, but found 3 results}}
    struct.member @foo : !array.type<affine_map<(i) -> (1, 2, i)> x !felt.type>
    function.def @compute() -> !struct.type<@q> {
      %self = struct.new : !struct.type<@q>
      function.return %self : !struct.type<@q>
    }
    function.def @constrain(%self : !struct.type<@q>) {
      function.return
    }
  }
}
